refactor: restructure project architecture by migrating models to dedicated entities, dtos, mappers, and services packages